<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="10dp"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/file_explorer"
        android:id="@+id/tv_path"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"

        android:layout_centerVertical="true"
        android:layout_marginBottom="0dp"/>
    <android.support.v7.widget.RecyclerView
        android:choiceMode="singleChoice"
        android:listSelector="#73cfcfcf"
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:layout_below="@+id/tv_path"/>

    <Button
        android:id="@+id/b_previous"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/cardview_dark_background"
        android:text="@string/previous"
        android:textColor="@color/cardview_light_background"


        />

    <Button
        android:id="@+id/b_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:background="@color/cardview_dark_background"
        android:textColor="@color/cardview_light_background"
        android:layout_alignTop="@+id/b_previous"
        android:layout_alignParentEnd="true"

        />


</RelativeLayout>